# SAM

./: .gitattributes  AUDIT_CHECKLIST.md  AUDIT_REPORT.md  BLANK_SCREEN_DIAGNOSIS.md  CLAUDE_PROJECT_STATE.json  DIAGNOSTIC_STEPS.md  DIAGNOSTIC_TOOLS.md  FINAL_COMPLETION_REPORT.md  INPUT_FIX_GUIDE.md  MASTER_STATUS.md  Makefile  OPTIONAL_FEATURES_COMPLETE.md  OPTIONAL_FEATURES_QUICKSTART.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTED.md  PHASE1_PROGRESS.md  PHASE1_SUMMARY.md  PHASE1_TEST_SUITE.md  PHASE1_VALIDATION.md  PHASE2_BACKEND_TEST_RESULTS.md  PHASE2_COMPLETE.md  PHASE2_CONSOLE_TEST.js  PHASE2_STATUS.md  PHASE2_TESTING_GUIDE.md  PHASE2_TEST_NOW.md  PHASE2_TEST_SUMMARY.md  PHASE3_PROGRESS.md  PHASE4_100_PERCENT_COMPLETE.md  PHASE4_FINAL_COMPLETE.md  PHASE4_PROGRESS.md  PHASE4_TAURI_COMPLETE.md  PHASE5_PRODUCTION_COMPLETE.md  PHASE5_QUICKREF.md  PHASE5_TERMINAL_SCAFFOLD.md  PROGRESS_TRACKER.md  PROJECT_STATUS_FINAL.md  PROVE_IT_WORKFLOW.md  README.md  README_TESTING.md  RELEASE_CHECKLIST.md  (+34 more)
warp_core/: API_REFERENCE.md  Cargo.toml  PHASE5_SUMMARY.md  QUICKSTART.md  README.md  run_pty_tests.sh
warp_core/examples/: napi_bridge.rs  pty_interactive.rs
warp_core/src/: autocorrect.rs  block_sharing.rs  completions.rs  cwd_tracker.rs  fs_ops.rs  journal_store.rs  launch_configs.rs  lib.rs  napi_bridge.rs  osc_parser.rs  pty.rs  secret_redactor.rs  session.rs  shell_hooks.rs  workflows.rs
warp_core/tests/: golden_screen_tests.rs  osc_parser_tests.rs
warp_core/tests/fixtures/: corrupted_ansi.raw  good_session.raw
warp_core/tests/snapshots/: golden_screen_tests__golden_single_short_session.snap  golden_screen_tests__golden_with_heuristic_fallback.snap
warp_tauri/src-tauri/: Cargo.toml  models  target  tauri.conf.json
warp_tauri/src-tauri/models/: Modelfile.sam-trained  Modelfile.sam-universal  Modelfile.sam-universal-lean  Modelfile.sam-universal-small  combined_training_data.jsonl
warp_tauri/src-tauri/models/training_data/: README.md  combined_training_data.jsonl  convert_to_ollama.sh  run_finetune.sh  setup_finetune.sh  test_sam.py
warp_tauri/src-tauri/src/: autonomous.rs  brain.rs  commands.rs  debug_server.rs  hotkeys.rs  lib.rs  main.rs  ollama.rs  plan_store.rs  scheduler.rs  ssh_session.rs  structured_log.rs  test_runner.rs  tray.rs
warp_tauri/src-tauri/src/scaffolding/: audio_bell.rs  autocomplete.rs  autonomy.rs  background_tasks.rs  character_library.rs  command_palette.rs  command_suggest.rs  config_files.rs  context_manager.rs  embedding_engine.rs  external_ai.rs  fullscreen_apps.rs  guaranteed_success.rs  hooks.rs  hot_reload.rs  hybrid_router.rs  integrations.rs  intelligence_engine.rs  intelligence_v2.rs  (+42 more)
warp_tauri/src-tauri/tests/: autonomous_exhaustive.rs  full_phase1_6_integration.rs  phase1_3_integration.rs  phase2_test.rs  phase3_inproc_runner.rs  phase5_integration.rs
(+1935 files in other folders)
