[package]
name = "sam-terminal"
version = "1.0.0"
description = "SAM - Sentient Assistant Module. Your personal AI companion terminal."
authors = ["followthedavid"]
license = "MIT"
repository = "https://github.com/followthedavid/SAM"
edition = "2021"

[lib]
name = "sam_terminal"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "path-all", "dialog-confirm", "dialog-save", "dialog-open", "dialog-ask", "dialog-message", "fs-read-file", "fs-write-file",
    "clipboard-all",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-set-title",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp_core = { path = "../../warp_core" }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream", "blocking", "cookies"] }
dirs = "6.0.0"
rand = "0.8"
futures-util = "0.3"
shellexpand = "3.1"
tokio-tungstenite = "0.20"
chrono = "0.4.42"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
csv = "1.3"
tempfile = "3.23.0"
ssh2 = "0.9"
urlencoding = "2.1"
thiserror = "1.0"
glob = "0.3"
libc = "0.2"
walkdir = "2.5.0"
window-vibrancy = "0.4"
getrandom = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
filetime = "0.2.26"
